--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
             padding: 40px;
             border-radius: 20px;
             position: relative;
-            overflow: hidden;
+            overflow-y: auto;
+            max-height: 70vh;
         }
 
         .message {
