--- a/index.html
+++ b/index.html
@@ -124,26 +124,26 @@
   ];
 
   const images = [
-    'https://i.ibb.co/Dg4MKm8v/IMG-2485.jpg',
-    'https://i.ibb.co/KzS7j5hz/IMG-2481.jpg',
-    'https://i.ibb.co/4ngJ8Ftr/IMG-2435.jpg',
-    'https://i.ibb.co/4ZdKYrKh/Whats-App-Image-2025-10-06-at-19-44-19-876ef881.jpg',
-    'https://i.ibb-co/4wQTjt9V/Whats-App-Image-2025-10-06-at-19-44-18-c101506c.jpg',
-    'https://i.ibb.co/NnTmWfvj/Whats-App-Image-2025-10-06-at-19-44-19-4c94112e.jpg',
-    'https://i.ibb.co/3yVkSym6/Whats-App-Image-2025-10-06-at-19-44-18-bd18e29f.jpg',
-    'https://i.ibb.co/wFZ5tsgL/Whats-App-Image-2025-10-06-at-19-43-08-167375b8.jpg',
-    'https://i.ibb.co/m5hVdV2j/Whats-App-Image-2025-10-06-at-19-43-08-bec8dd14.jpg',
-    'https://i.ibb.co/dwWJZY6L/Whats-App-Image-2025-10-06-at-19-43-07-0b159908.jpg',
-    'https://i.ibb.co/tM9CkGNW/Whats-App-Image-2025-10-06-at-19-43-07-9fa7d041.jpg',
-    'https://i.ibb.co/C5x2V8Bk/Whats-App-Image-2025-10-06-at-19-43-01-7c3a94c7.jpg',
-    'https://i.ibb.co/Hf9vF11b/Whats-App-Image-2025-10-06-at-19-43-00-2e6379d9.jpg',
-    'https://i.ibb.co/21f3N3qQ/Whats-App-Image-2025-10-06-at-19-43-00-52d9f796.jpg',
-    'https://i.ibb.co/ZzWqJgw0/Whats-App-Image-2025-10-06-at-19-42-57-c548527d.jpg',
-    'https://i.ibb.co/yFzyr8rt/Whats-App-Image-2025-10-06-at-19-42-56-c784729b.jpg',
-    'https://i.ibb.co/rRd6gkY9/Whats-App-Image-2025-10-06-at-19-42-56-ea17a998.jpg',
-    'https://i.ibb-co/S4CQ0X81/Whats-App-Image-2025-10-06-at-19-42-55-bbaa488b.jpg',
-    'https://i.ibb.co/0jBPnX8k/Whats-App-Image-2025-10-06-at-19-42-53-9efb4cac.jpg'
-  ];
+  'https://i.ibb.co/Dg4MKm8v/IMG-2485.jpg',
+  'https://i.ibb.co/KzS7j5hz/IMG-2481.jpg',
+  'https://i.ibb.co/4ngJ8Ftr/IMG-2435.jpg',
+  'https://i.ibb.co/4ZdKYrKh/Whats-App-Image-2025-10-06-at-19-44-19-876ef881.jpg',
+  'https://i.ibb.co/4wQTjt9V/Whats-App-Image-2025-10-06-at-19-44-18-c101506c.jpg', // ✅ fixed link
+  'https://i.ibb.co/NnTmWfvj/Whats-App-Image-2025-10-06-at-19-44-19-4c94112e.jpg',
+  'https://i.ibb.co/3yVkSym6/Whats-App-Image-2025-10-06-at-19-44-18-bd18e29f.jpg',
+  'https://i.ibb.co/wFZ5tsgL/Whats-App-Image-2025-10-06-at-19-43-08-167375b8.jpg',
+  'https://i.ibb.co/m5hVdV2j/Whats-App-Image-2025-10-06-at-19-43-08-bec8dd14.jpg',
+  'https://i.ibb.co/dwWJZY6L/Whats-App-Image-2025-10-06-at-19-43-07-0b159908.jpg',
+  'https://i.ibb.co/tM9CkGNW/Whats-App-Image-2025-10-06-at-19-43-07-9fa7d041.jpg',
+  'https://i.ibb.co/C5x2V8Bk/Whats-App-Image-2025-10-06-at-19-43-01-7c3a94c7.jpg',
+  'https://i.ibb.co/Hf9vF11b/Whats-App-Image-2025-10-06-at-19-43-00-2e6379d9.jpg',
+  'https://i.ibb.co/21f3N3qQ/Whats-App-Image-2025-10-06-at-19-43-00-52d9f796.jpg',
+  'https://i.ibb.co/ZzWqJgw0/Whats-App-Image-2025-10-06-at-19-42-57-c548527d.jpg',
+  'https://i.ibb.co/yFzyr8rt/Whats-App-Image-2025-10-06-at-19-42-56-c784729b.jpg',
+  'https://i.ibb.co/rRd6gkY9/Whats-App-Image-2025-10-06-at-19-42-56-ea17a998.jpg',
+  'https://i.ibb-co/S4CQ0X81/Whats-App-Image-2025-10-06-at-19-42-55-bbaa488b.jpg',
+  'https://i.ibb.co/0jBPnX8k/Whats-App-Image-2025-10-06-at-19-42-53-9efb4cac.jpg'
+];
 
   let currentIndex = 0;
 
